Made use of some newer java features.